opam-version: "2.0"
maintainer:   [ "romain.calascibetta@gmail.com" ]
authors:      "Romain Calascibetta"
license:      "ISC"
homepage:     "https://github.com/dinosaure/lun"
bug-reports:  "https://github.com/dinosaure/lun/issues"
dev-repo:     "git+https://github.com/dinosaure/lun.git"
doc:          "https://dinosaure.github.io/lun/"
synopsis:     "Optics with ppx"
description: """A library which provides optics for any types"""

build: ["dune" "build" "-p" name "-j" jobs]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml" {>= "4.12.0"}
  "dune"
]
