opam-version: "2.0"
maintainer:   [ "romain.calascibetta@gmail.com" ]
authors:      "Romain Calascibetta"
license:      "ISC"
homepage:     "https://git.robur.coop/robur/lun"
bug-reports:  "https://git.robur.coop/robur/lun/issues"
dev-repo:     "git+https://github.com/robur-coop/lun.git"
doc:          "https://robur-coop.github.io/lun/"
synopsis:     "Optics in OCaml"
description: """(▀̿Ĺ̯▀̿ ̿)"""

build: ["dune" "build" "-p" name "-j" jobs]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml" {>= "4.12.0"}
  "dune"
]
