opam-version: "2.0"
maintainer:   ["Romain Calascibetta <romain.calascibetta@gmail.com>"]
authors:      ["Romain Calascibetta <romain.calascibetta@gmail.com>"]
license:      "ISC"
tags:         ["ppx" "optics"]
homepage:     "https://github.com/dinosaure/lun"
bug-reports:  "https://github.com/dinosaure/lun/issues"
dev-repo:     "git+https://github.com/dinosaure/ppx_lun.git"
synopsis:     "Optics and ppx"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml"
  "dune" {>= "3.5"}
  "lun" {= version}
  "ppxlib" {>= "0.7.0"}
]
