opam-version: "2.0"
maintainer:   ["Romain Calascibetta <romain.calascibetta@gmail.com>"]
authors:      ["Romain Calascibetta <romain.calascibetta@gmail.com>"]
license:      "MIT"
tags:         ["ppx" "optics"]
homepage:     "https://git.robur.io/robur/lun"
bug-reports:  "https://git.robur.io/robur/lun/issues"
dev-repo:     "git+https://github.com/roburio/lun.git"
synopsis:     "Optics with lun package and PPX"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "3.5"}
  "lun" {= version}
  "ppxlib" {>= "0.29.0"}
  "fmt" {with-test}
]
